--- a/README.org
+++ b/README.org
@@ -17,6 +17,7 @@
 * Table of Contents :toc:
 - [[#introduction][Introduction]]
 - [[#main-git-subtree-project-dependencies][Main Git Subtree Project Dependencies]]
+  - [[#awesomewm-config][Awesomewm-config]]
 - [[#dotfiles-repository-administration-support][Dotfiles Repository Administration Support]]
   - [[#define-git-bare-repository][Define Git Bare Repository.]]
   - [[#update-dependency-git-subtrees-projects][Update dependency git subtrees projects.]]
@@ -28,7 +29,12 @@ Dotfiles are the customization and configuration files that are used to personal
 * Main Git Subtree Project Dependencies
 Github Project's list added as git subtrees to the dotfiles project. These depended projects are similar as libraries; can be used alone. The dotfiles project creates union of these projects and add additional configs for global usage "together".
 
-+ [[https://github.com/raven2cz/awesomewm-config][Awesomewm-config]]
+** [[https://github.com/raven2cz/awesomewm-config][Awesomewm-config]]
+*AwesomeWM (git-main branch) configuration* with new 80s DarkOne Theme, Amazing Theme.
+
+*80s OneDark Theme* is focused to Atom colors and 80s pastel color schemes. New complex configuration of main panel with many features and additional modifications of conky, xmenu, rofi and alacritty settings.
+
+*Amazing Theme* is focused to green colors with gold highlights. Applications styling and additional colors are based on Nordic Colors and KDE Nordic Theme An arctic, north-bluish color palette.
 
 * Dotfiles Repository Administration Support
 No extra tooling, no symlinks, files are tracked on a version control system, you can use *different branches for different computers*, you can replicate you configuration easily on new installation.
