--- a/README.org
+++ b/README.org
@@ -18,6 +18,7 @@
 - [[#introduction][Introduction]]
 - [[#main-git-subtree-project-dependencies][Main Git Subtree Project Dependencies]]
   - [[#awesomewm-config][Awesomewm-config]]
+  - [[#polybar-config][Polybar-config]]
 - [[#dotfiles-repository-administration-support][Dotfiles Repository Administration Support]]
   - [[#define-git-bare-repository][Define Git Bare Repository.]]
   - [[#update-dependency-git-subtrees-projects][Update dependency git subtrees projects.]]
@@ -35,6 +36,8 @@ Github Project's list added as git subtrees to the dotfiles project. These depen
 *80s OneDark Theme* is focused to Atom colors and 80s pastel color schemes. New complex configuration of main panel with many features and additional modifications of conky, xmenu, rofi and alacritty settings.
 
 *Amazing Theme* is focused to green colors with gold highlights. Applications styling and additional colors are based on Nordic Colors and KDE Nordic Theme An arctic, north-bluish color palette.
+** [[https://github.com/raven2cz/polybar-config][Polybar-config]]
+Polybar configuration with patched and improved modules for Awesome, i3 and XFCE4. Base design fits to MX-Linux (Debian Stable) and Arch Distros.
 
 * Dotfiles Repository Administration Support
 No extra tooling, no symlinks, files are tracked on a version control system, you can use *different branches for different computers*, you can replicate you configuration easily on new installation.
