--- a/README.org
+++ b/README.org
@@ -20,6 +20,7 @@
   - [[#awesomewm-config][Awesomewm-config]]
   - [[#polybar-config][Polybar-config]]
   - [[#doom-emacs-config][Doom-Emacs-config]]
+  - [[#qtile-config][Qtile-config]]
 - [[#dotfiles-repository-administration-support][Dotfiles Repository Administration Support]]
   - [[#define-git-bare-repository][Define Git Bare Repository.]]
   - [[#update-dependency-git-subtrees-projects][Update dependency git subtrees projects.]]
@@ -43,6 +44,9 @@ Polybar configuration with patched and improved modules for Awesome, i3 and XFCE
 
 ** [[https://github.com/raven2cz/emacs][Doom-Emacs-config]]
 This is my personal Doom Emacs config. Doom Emacs is a distribution of Emacs that uses the “evil” keybindings (Vim keybindings) and includes a number of nice extensions and a bit of configuration out of the box. I am maintaining this config not just for myself, but also for those that want to explore some of what is possible with Emacs :penguin:.
+
+** [[https://github.com/raven2cz/qtile-config][Qtile-config]]
+Qtile is a full-featured, hackable tiling window manager written and configured in Python. My inherited configuration from Arco Linux is attached and changed to my Arch Linux env.
 
 * Dotfiles Repository Administration Support
 No extra tooling, no symlinks, files are tracked on a version control system, you can use *different branches for different computers*, you can replicate you configuration easily on new installation.
