--- a/README.org
+++ b/README.org
@@ -73,6 +73,7 @@ i3 is a tiling window manager, completely written from scratch. The target platf
 The configured are ~ZSH~ and ~Fish~. The ZSH was configured ~powerlevel10k~. But I'm using Fish now. The ZSH is connected with Fish inside ~.zshrc~. The full configuration of Fish is inside file ~$HOME/fish/config.fish~. The *fisher plugin manager* is used for fish configuration, because I'm Fischer :penguin:.
 
 *** Terminals
+#+html: <p align="center"><img src=".screenshots/kitty.png" /></p>
 ~Alacritty~ and ~Kitty~ are used.
 
 **** Colorscripts Installation
